v1.1.0/modules/schema/pages/class/AggregatedPnode.adoc
= `AggregatedPnode`
:toclevels: 4


+++An aggregated pricing node is a specialized type of pricing node used to model items such as System Zone, Default Price Zone, Custom Price Zone, Control Area, Aggregated Generation, Aggregated Particpating Load, Aggregated Non-Participating Load, Trading Hub, Designated Control Area(DCA) Zone.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:AggregatedPnode`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/Pnode.adoc[`Pnode`]
*** *`AggregatedPnode`*
 **** xref::class/CongestionArea.adoc[`CongestionArea`]


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<GenDistributionFactor,`GenDistributionFactor`>>
//| [[slots_table.GenDistributionFactor]]<<GenDistributionFactor,`GenDistributionFactor`>>
| 1..* +
xref::class/GenDistributionFactor.adoc[`GenDistributionFactor`]
| _n/a_
| _n/a_

| <<LoadDistributionFactor,`LoadDistributionFactor`>>
//| [[slots_table.LoadDistributionFactor]]<<LoadDistributionFactor,`LoadDistributionFactor`>>
| 1..* +
xref::class/LoadDistributionFactor.adoc[`LoadDistributionFactor`]
| _n/a_
| _n/a_

| <<MPMTestResults,`MPMTestResults`>>
//| [[slots_table.MPMTestResults]]<<MPMTestResults,`MPMTestResults`>>
| 1..* +
xref::class/MPMTestResults.adoc[`MPMTestResults`]
| _n/a_
| _n/a_

| <<MPMTestThreshold,`MPMTestThreshold`>>
//| [[slots_table.MPMTestThreshold]]<<MPMTestThreshold,`MPMTestThreshold`>>
| 1..* +
xref::class/MPMTestThreshold.adoc[`MPMTestThreshold`]
| _n/a_
| _n/a_

| <<MktCombinedCyclePlant,`MktCombinedCyclePlant`>>
//| [[slots_table.MktCombinedCyclePlant]]<<MktCombinedCyclePlant,`MktCombinedCyclePlant`>>
| 0..* +
xref::class/MktCombinedCyclePlant.adoc[`MktCombinedCyclePlant`]
| _n/a_
| _n/a_

| <<PnodeDistributionFactor,`PnodeDistributionFactor`>>
//| [[slots_table.PnodeDistributionFactor]]<<PnodeDistributionFactor,`PnodeDistributionFactor`>>
| 1..* +
xref::class/PnodeDistributionFactor.adoc[`PnodeDistributionFactor`]
| _n/a_
| _n/a_

| <<TACArea,`TACArea`>>
//| [[slots_table.TACArea]]<<TACArea,`TACArea`>>
| 0..* +
xref::class/TACArea.adoc[`TACArea`]
| _n/a_
| _n/a_

| <<TradingHubValues,`TradingHubValues`>>
//| [[slots_table.TradingHubValues]]<<TradingHubValues,`TradingHubValues`>>
| 0..* +
xref::class/TradingHubValues.adoc[`TradingHubValues`]
| _n/a_
| _n/a_

| <<apnodeType,`apnodeType`>>
//| [[slots_table.apnodeType]]<<apnodeType,`apnodeType`>>
| 0..1 +
xref::enumeration/ApnodeType.adoc[`ApnodeType`]
| +++Aggregate Price Node Types+++
| _n/a_

| <<participationCategory,`participationCategory`>>
//| [[slots_table.participationCategory]]<<participationCategory,`participationCategory`>>
| 0..1 +
xref::enumeration/ParticipationCategoryMPM.adoc[`ParticipationCategoryMPM`]
| +++Designated Control Area participation in LMP price measurement

'Y' - Participates in both Local Market Power Mitigation...+++
| _n/a_

| <<AggregateNode,`AggregateNode`>>
//| [[slots_table.AggregateNode]]<<AggregateNode,`AggregateNode`>>
| 0..* +
xref::class/AggregateNode.adoc[`AggregateNode`]
| _n/a_
| xref::class/Pnode.adoc[`Pnode`]

| <<CommodityDefinition,`CommodityDefinition`>>
//| [[slots_table.CommodityDefinition]]<<CommodityDefinition,`CommodityDefinition`>>
| 0..* +
xref::class/CommodityDefinition.adoc[`CommodityDefinition`]
| _n/a_
| xref::class/Pnode.adoc[`Pnode`]

| <<DeliveryTransactionBids,`DeliveryTransactionBids`>>
//| [[slots_table.DeliveryTransactionBids]]<<DeliveryTransactionBids,`DeliveryTransactionBids`>>
| 0..* +
xref::class/TransactionBid.adoc[`TransactionBid`]
| _n/a_
| xref::class/Pnode.adoc[`Pnode`]

| <<ExPostResults,`ExPostResults`>>
//| [[slots_table.ExPostResults]]<<ExPostResults,`ExPostResults`>>
| 0..* +
xref::class/ExPostPricingResults.adoc[`ExPostPricingResults`]
| _n/a_
| xref::class/Pnode.adoc[`Pnode`]

| <<FTRs,`FTRs`>>
//| [[slots_table.FTRs]]<<FTRs,`FTRs`>>
| 0..* +
xref::class/FTR.adoc[`FTR`]
| _n/a_
| xref::class/Pnode.adoc[`Pnode`]

| <<MktMeasurement,`MktMeasurement`>>
//| [[slots_table.MktMeasurement]]<<MktMeasurement,`MktMeasurement`>>
| 0..* +
xref::class/MktMeasurement.adoc[`MktMeasurement`]
| +++Allows Measurements to be associated to Pnodes.+++
| xref::class/Pnode.adoc[`Pnode`]

| <<OrgPnodeAllocation,`OrgPnodeAllocation`>>
//| [[slots_table.OrgPnodeAllocation]]<<OrgPnodeAllocation,`OrgPnodeAllocation`>>
| 0..* +
xref::class/OrgPnodeAllocation.adoc[`OrgPnodeAllocation`]
| _n/a_
| xref::class/Pnode.adoc[`Pnode`]

| <<PnodeResults,`PnodeResults`>>
//| [[slots_table.PnodeResults]]<<PnodeResults,`PnodeResults`>>
| 1..* +
xref::class/PnodeResults.adoc[`PnodeResults`]
| _n/a_
| xref::class/Pnode.adoc[`Pnode`]

| <<RTO,`RTO`>>
//| [[slots_table.RTO]]<<RTO,`RTO`>>
| 0..1 +
xref::class/RTO.adoc[`RTO`]
| _n/a_
| xref::class/Pnode.adoc[`Pnode`]

| <<ReceiptTransactionBids,`ReceiptTransactionBids`>>
//| [[slots_table.ReceiptTransactionBids]]<<ReceiptTransactionBids,`ReceiptTransactionBids`>>
| 0..* +
xref::class/TransactionBid.adoc[`TransactionBid`]
| _n/a_
| xref::class/Pnode.adoc[`Pnode`]

| <<RegisteredResources,`RegisteredResources`>>
//| [[slots_table.RegisteredResources]]<<RegisteredResources,`RegisteredResources`>>
| 0..* +
xref::class/RegisteredResource.adoc[`RegisteredResource`]
| +++A registered resource injects power at one or more connectivity nodes related to a pnode+++
| xref::class/Pnode.adoc[`Pnode`]

| <<SinkCRRSegment,`SinkCRRSegment`>>
//| [[slots_table.SinkCRRSegment]]<<SinkCRRSegment,`SinkCRRSegment`>>
| 0..* +
xref::class/CRRSegment.adoc[`CRRSegment`]
| _n/a_
| xref::class/Pnode.adoc[`Pnode`]

| <<SourceCRRSegment,`SourceCRRSegment`>>
//| [[slots_table.SourceCRRSegment]]<<SourceCRRSegment,`SourceCRRSegment`>>
| 0..* +
xref::class/CRRSegment.adoc[`CRRSegment`]
| _n/a_
| xref::class/Pnode.adoc[`Pnode`]

| <<SubControlArea,`SubControlArea`>>
//| [[slots_table.SubControlArea]]<<SubControlArea,`SubControlArea`>>
| 0..1 +
xref::class/SubControlArea.adoc[`SubControlArea`]
| _n/a_
| xref::class/Pnode.adoc[`Pnode`]

| <<Trade,`Trade`>>
//| [[slots_table.Trade]]<<Trade,`Trade`>>
| 0..* +
xref::class/Trade.adoc[`Trade`]
| _n/a_
| xref::class/Pnode.adoc[`Pnode`]

| <<isPublic,`isPublic`>>
//| [[slots_table.isPublic]]<<isPublic,`isPublic`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++If true, this Pnode is public (prices are published for DA/RT and FTR markets), otherwise it is private (location is not...+++
| xref::class/Pnode.adoc[`Pnode`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#AggregateNode]
=== `AggregateNode`



[cols="h,4",width=65%]
|===
| URI
| `cim:Pnode.AggregateNode`
| Cardinality
| 0..*
| Type
| xref::class/AggregateNode.adoc[`AggregateNode`]

| Inherited from
| xref::class/Pnode.adoc[`Pnode`]


|===

////
[.text-left]
--
<<slots_table.AggregateNode,&#10548;>>
--
////


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#apnodeType]
=== `apnodeType`
+++Aggregate Price Node Types+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AggregatedPnode.apnodeType`
| Cardinality
| 0..1
| Type
| xref::enumeration/ApnodeType.adoc[`ApnodeType`]


|===

////
[.text-left]
--
<<slots_table.apnodeType,&#10548;>>
--
////


//[discrete]
[#CommodityDefinition]
=== `CommodityDefinition`



[cols="h,4",width=65%]
|===
| URI
| `cim:Pnode.CommodityDefinition`
| Cardinality
| 0..*
| Type
| xref::class/CommodityDefinition.adoc[`CommodityDefinition`]

| Inherited from
| xref::class/Pnode.adoc[`Pnode`]


|===

////
[.text-left]
--
<<slots_table.CommodityDefinition,&#10548;>>
--
////


//[discrete]
[#DeliveryTransactionBids]
=== `DeliveryTransactionBids`



[cols="h,4",width=65%]
|===
| URI
| `cim:Pnode.DeliveryTransactionBids`
| Cardinality
| 0..*
| Type
| xref::class/TransactionBid.adoc[`TransactionBid`]

| Inherited from
| xref::class/Pnode.adoc[`Pnode`]


|===

////
[.text-left]
--
<<slots_table.DeliveryTransactionBids,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#ExPostResults]
=== `ExPostResults`



[cols="h,4",width=65%]
|===
| URI
| `cim:Pnode.ExPostResults`
| Cardinality
| 0..*
| Type
| xref::class/ExPostPricingResults.adoc[`ExPostPricingResults`]

| Inherited from
| xref::class/Pnode.adoc[`Pnode`]


|===

////
[.text-left]
--
<<slots_table.ExPostResults,&#10548;>>
--
////


//[discrete]
[#FTRs]
=== `FTRs`



[cols="h,4",width=65%]
|===
| URI
| `cim:Pnode.FTRs`
| Cardinality
| 0..*
| Type
| xref::class/FTR.adoc[`FTR`]

| Inherited from
| xref::class/Pnode.adoc[`Pnode`]


|===

////
[.text-left]
--
<<slots_table.FTRs,&#10548;>>
--
////


//[discrete]
[#GenDistributionFactor]
=== `GenDistributionFactor`



[cols="h,4",width=65%]
|===
| URI
| `cim:AggregatedPnode.GenDistributionFactor`
| Cardinality
| 1..*
| Type
| xref::class/GenDistributionFactor.adoc[`GenDistributionFactor`]


|===

////
[.text-left]
--
<<slots_table.GenDistributionFactor,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#isPublic]
=== `isPublic`
+++If true, this Pnode is public (prices are published for DA/RT and FTR markets), otherwise it is private (location is not usable by market for bidding/FTRs/transactions).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Pnode.isPublic`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/Pnode.adoc[`Pnode`]


|===

////
[.text-left]
--
<<slots_table.isPublic,&#10548;>>
--
////


//[discrete]
[#LoadDistributionFactor]
=== `LoadDistributionFactor`



[cols="h,4",width=65%]
|===
| URI
| `cim:AggregatedPnode.LoadDistributionFactor`
| Cardinality
| 1..*
| Type
| xref::class/LoadDistributionFactor.adoc[`LoadDistributionFactor`]


|===

////
[.text-left]
--
<<slots_table.LoadDistributionFactor,&#10548;>>
--
////


//[discrete]
[#MktCombinedCyclePlant]
=== `MktCombinedCyclePlant`



[cols="h,4",width=65%]
|===
| URI
| `cim:AggregatedPnode.MktCombinedCyclePlant`
| Cardinality
| 0..*
| Type
| xref::class/MktCombinedCyclePlant.adoc[`MktCombinedCyclePlant`]


|===

////
[.text-left]
--
<<slots_table.MktCombinedCyclePlant,&#10548;>>
--
////


//[discrete]
[#MktMeasurement]
=== `MktMeasurement`
+++Allows Measurements to be associated to Pnodes.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Pnode.MktMeasurement`
| Cardinality
| 0..*
| Type
| xref::class/MktMeasurement.adoc[`MktMeasurement`]

| Inherited from
| xref::class/Pnode.adoc[`Pnode`]


|===

////
[.text-left]
--
<<slots_table.MktMeasurement,&#10548;>>
--
////


//[discrete]
[#MPMTestResults]
=== `MPMTestResults`



[cols="h,4",width=65%]
|===
| URI
| `cim:AggregatedPnode.MPMTestResults`
| Cardinality
| 1..*
| Type
| xref::class/MPMTestResults.adoc[`MPMTestResults`]


|===

////
[.text-left]
--
<<slots_table.MPMTestResults,&#10548;>>
--
////


//[discrete]
[#MPMTestThreshold]
=== `MPMTestThreshold`



[cols="h,4",width=65%]
|===
| URI
| `cim:AggregatedPnode.MPMTestThreshold`
| Cardinality
| 1..*
| Type
| xref::class/MPMTestThreshold.adoc[`MPMTestThreshold`]


|===

////
[.text-left]
--
<<slots_table.MPMTestThreshold,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#OrgPnodeAllocation]
=== `OrgPnodeAllocation`



[cols="h,4",width=65%]
|===
| URI
| `cim:Pnode.OrgPnodeAllocation`
| Cardinality
| 0..*
| Type
| xref::class/OrgPnodeAllocation.adoc[`OrgPnodeAllocation`]

| Inherited from
| xref::class/Pnode.adoc[`Pnode`]


|===

////
[.text-left]
--
<<slots_table.OrgPnodeAllocation,&#10548;>>
--
////


//[discrete]
[#participationCategory]
=== `participationCategory`
+++Designated Control Area participation in LMP price measurement

'Y' - Participates in both Local Market Power Mitigation (LMPM) and System Market Power Mitigation (SMPM)
'N' - Not included in LMP price measures
'S' - Participatesin SMPM price measures
'L' - Participatesin LMPM price measures+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AggregatedPnode.participationCategory`
| Cardinality
| 0..1
| Type
| xref::enumeration/ParticipationCategoryMPM.adoc[`ParticipationCategoryMPM`]


|===

////
[.text-left]
--
<<slots_table.participationCategory,&#10548;>>
--
////


//[discrete]
[#PnodeDistributionFactor]
=== `PnodeDistributionFactor`



[cols="h,4",width=65%]
|===
| URI
| `cim:AggregatedPnode.PnodeDistributionFactor`
| Cardinality
| 1..*
| Type
| xref::class/PnodeDistributionFactor.adoc[`PnodeDistributionFactor`]


|===

////
[.text-left]
--
<<slots_table.PnodeDistributionFactor,&#10548;>>
--
////


//[discrete]
[#PnodeResults]
=== `PnodeResults`



[cols="h,4",width=65%]
|===
| URI
| `cim:Pnode.PnodeResults`
| Cardinality
| 1..*
| Type
| xref::class/PnodeResults.adoc[`PnodeResults`]

| Inherited from
| xref::class/Pnode.adoc[`Pnode`]


|===

////
[.text-left]
--
<<slots_table.PnodeResults,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#ReceiptTransactionBids]
=== `ReceiptTransactionBids`



[cols="h,4",width=65%]
|===
| URI
| `cim:Pnode.ReceiptTransactionBids`
| Cardinality
| 0..*
| Type
| xref::class/TransactionBid.adoc[`TransactionBid`]

| Inherited from
| xref::class/Pnode.adoc[`Pnode`]


|===

////
[.text-left]
--
<<slots_table.ReceiptTransactionBids,&#10548;>>
--
////


//[discrete]
[#RegisteredResources]
=== `RegisteredResources`
+++A registered resource injects power at one or more connectivity nodes related to a pnode+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Pnode.RegisteredResources`
| Cardinality
| 0..*
| Type
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| Inherited from
| xref::class/Pnode.adoc[`Pnode`]


|===

////
[.text-left]
--
<<slots_table.RegisteredResources,&#10548;>>
--
////


//[discrete]
[#RTO]
=== `RTO`



[cols="h,4",width=65%]
|===
| URI
| `cim:Pnode.RTO`
| Cardinality
| 0..1
| Type
| xref::class/RTO.adoc[`RTO`]

| Inherited from
| xref::class/Pnode.adoc[`Pnode`]


|===

////
[.text-left]
--
<<slots_table.RTO,&#10548;>>
--
////


//[discrete]
[#SinkCRRSegment]
=== `SinkCRRSegment`



[cols="h,4",width=65%]
|===
| URI
| `cim:Pnode.SinkCRRSegment`
| Cardinality
| 0..*
| Type
| xref::class/CRRSegment.adoc[`CRRSegment`]

| Inherited from
| xref::class/Pnode.adoc[`Pnode`]


|===

////
[.text-left]
--
<<slots_table.SinkCRRSegment,&#10548;>>
--
////


//[discrete]
[#SourceCRRSegment]
=== `SourceCRRSegment`



[cols="h,4",width=65%]
|===
| URI
| `cim:Pnode.SourceCRRSegment`
| Cardinality
| 0..*
| Type
| xref::class/CRRSegment.adoc[`CRRSegment`]

| Inherited from
| xref::class/Pnode.adoc[`Pnode`]


|===

////
[.text-left]
--
<<slots_table.SourceCRRSegment,&#10548;>>
--
////


//[discrete]
[#SubControlArea]
=== `SubControlArea`



[cols="h,4",width=65%]
|===
| URI
| `cim:Pnode.SubControlArea`
| Cardinality
| 0..1
| Type
| xref::class/SubControlArea.adoc[`SubControlArea`]

| Inherited from
| xref::class/Pnode.adoc[`Pnode`]


|===

////
[.text-left]
--
<<slots_table.SubControlArea,&#10548;>>
--
////


//[discrete]
[#TACArea]
=== `TACArea`



[cols="h,4",width=65%]
|===
| URI
| `cim:AggregatedPnode.TACArea`
| Cardinality
| 0..*
| Type
| xref::class/TACArea.adoc[`TACArea`]


|===

////
[.text-left]
--
<<slots_table.TACArea,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#Trade]
=== `Trade`



[cols="h,4",width=65%]
|===
| URI
| `cim:Pnode.Trade`
| Cardinality
| 0..*
| Type
| xref::class/Trade.adoc[`Trade`]

| Inherited from
| xref::class/Pnode.adoc[`Pnode`]


|===

////
[.text-left]
--
<<slots_table.Trade,&#10548;>>
--
////


//[discrete]
[#TradingHubValues]
=== `TradingHubValues`



[cols="h,4",width=65%]
|===
| URI
| `cim:AggregatedPnode.TradingHubValues`
| Cardinality
| 0..*
| Type
| xref::class/TradingHubValues.adoc[`TradingHubValues`]


|===

////
[.text-left]
--
<<slots_table.TradingHubValues,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/GenDistributionFactor.adoc[`GenDistributionFactor`] | xref::class/GenDistributionFactor.adoc#AggregatedPnode[`AggregatedPnode`]



| xref::class/LoadDistributionFactor.adoc[`LoadDistributionFactor`] | xref::class/LoadDistributionFactor.adoc#AggregatedPnode[`AggregatedPnode`]



| xref::class/MktCombinedCyclePlant.adoc[`MktCombinedCyclePlant`] | xref::class/MktCombinedCyclePlant.adoc#AggregatedPnode[`AggregatedPnode`]



| xref::class/MPMTestResults.adoc[`MPMTestResults`] | xref::class/MPMTestResults.adoc#AggregatedPnode[`AggregatedPnode`]



| xref::class/MPMTestThreshold.adoc[`MPMTestThreshold`] | xref::class/MPMTestThreshold.adoc#AggregatedPnode[`AggregatedPnode`]



| xref::class/PnodeDistributionFactor.adoc[`PnodeDistributionFactor`] | xref::class/PnodeDistributionFactor.adoc#AggregatedPnode[`AggregatedPnode`]



| xref::class/TACArea.adoc[`TACArea`] | xref::class/TACArea.adoc#AggregatedPnode[`AggregatedPnode`]



| xref::class/TradingHubValues.adoc[`TradingHubValues`] | xref::class/TradingHubValues.adoc#AggregatedPnode[`AggregatedPnode`]


|===

